package LLD_Machine_Coding.pen;

public enum Mechanism {
    CLICK,
    TWIST,
    CAP
}
